styles.css
/* ... */
.machine-learning-modal-generated-labels-input {
  margin-left: calc(12.5px / var(--screen-size-delta));
  outline: none;
  white-space: pre;
  padding-right: calc(5px / var(--screen-size-delta));
  font-size: calc(15px / var(--screen-size-delta));
  padding-left: 1px;
}

#machine-learning-modal-generated-labels-submit-button {
  margin-top: calc(5px / var(--screen-size-delta));
  padding-top: calc(6px / var(--screen-size-delta));
  padding-bottom: calc(6px / var(--screen-size-delta));
  margin-left: calc(3px / var(--screen-size-delta));
  width: calc(60px / var(--screen-size-delta));
}

#machine-learning-modal-generated-labels-buttons {
  margin-top: calc(8px / var(--screen-size-delta));
}

.reverse-icon {
  transform: scale(-1, 1);
}

#left-side-bar {
  width: calc(57px / var(--screen-size-delta));
  text-align: center;
  float: left;
  background-color: white;
  height: 100vh;
  max-height: calc(100vh - 34px);
  overflow-y: auto;
  overflow-x: hidden;
  border-right: solid;
  border-left: solid;
  border-left-color: #80808026;
  border-right-color: rgb(197, 197, 197);
  border-width: 1px;
}

#left-side-bar-top-border {
  padding-top: calc(29px / var(--screen-size-delta));
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-bottom-color: #80808026;
  margin-bottom: 3px;
}

#left-side-bar-separator {
  width: calc(37px / var(--screen-size-delta));
  height: 1px;
  border-bottom: solid;
  border-width: 1px;
  border-color: #80808026;
  margin-left: calc(10px / var(--screen-size-delta));
  margin-top: calc(3px / var(--screen-size-delta));
  margin-bottom: calc(5px / var(--screen-size-delta));
}

#right-side-bar {
  width: 208px;
  padding-top: calc(8px / var(--screen-size-delta));
  float: right;
  background-color: white;
  height: calc(100vh - 43px);
  border-right: solid;
  border-left: solid;
  border-width: 1px;
  border-color: rgb(197, 197, 197);
  border-right-width: 0px;
}

#right-side-bar:hover {
  cursor: default;
}

.right-side-bar-component {
  display: block;
  left: 0;
  padding-top: calc(3px / var(--screen-size-delta));
}

.right-side-bar-component-title {
  height: calc(18px / var(--screen-size-delta));
  font-size: calc(16px / var(--screen-size-delta));
  padding-left: 5px;
  border-bottom: solid;
  border-bottom-color: #4e4b4b26;
  border-bottom-width: 1px;
  user-select: none;
}

#right-side-bar-components {
  font-family: Arial, Helvetica, sans-serif;
}

#label-list {
  width: 100%;
}

.labelListItem {
  padding-left: 4px;
  padding-bottom: 1px;
}

#labels-list-overflow-parent {
  overflow-x: auto;
  overflow-y: auto;
  height: calc((100vh - 287px) / 2);
  border-bottom: solid;
  border-bottom-color: #4e4b4b26;
  border-bottom-width: 1px;
  /* firefox */
  scrollbar-color: #8c8c8c #f9f9f9;
  scrollbar-width: thin;
}

#labels-list-overflow-parent::-webkit-scrollbar-track {
  background: #f9f9f9;
}

#labels-list-overflow-parent::-webkit-scrollbar-thumb {
  background: #8c8c8c;
  border-radius: 10px;
}

#labels-list-overflow-parent::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}

#image-list-component {
  padding-top: 0px;
}

#image-list-title-parent {
  position: relative;
  height: calc(25px / var(--screen-size-delta));
}

#image-list-title-text {
  position: absolute;
  bottom: 0.5px;
}

#upload-images-button {
  text-align: center;
  position: relative;
  float: right;
  margin-right: 0px;
  margin-top: 2px;
  height: calc(21.2px / var(--screen-size-delta));
}

#upload-images-icon {
  width: calc(15.4px / var(--screen-size-delta));
  padding-top: calc(3px / var(--screen-size-delta));
  padding-bottom: 0px;
  padding-left: calc(3px / var(--screen-size-delta));
  padding-right: calc(2.8px / var(--screen-size-delta));
}

#upload-images-button-popover {
  right: calc(17px / var(--screen-size-delta));
}

#remove-images-button-container {
  margin-top: 2px;
  padding-right: 4px;
  padding-top: 0px;
  float: right;
}

#remove-images-button {
  height: calc(21px / var(--screen-size-delta));
}

#remove-images-button-icon {
  width: calc(15.8px / var(--screen-size-delta));
  padding-top: calc(2.5px / var(--screen-size-delta));
  padding-left: calc(3.5px / var(--screen-size-delta));
  padding-right: calc(3px / var(--screen-size-delta));
}

#remove-images-button-popover {
  right: calc(2px / var(--screen-size-delta));
}

#remove-images-modal-parent {
  height: calc(189px / var(--screen-size-delta));
  width: calc(415px / var(--screen-size-delta));
  left: calc(-151px / var(--screen-size-delta));
}

#remove-images-modal-description {
  text-align: center;
  margin-top: calc(39px / var(--screen-size-delta));
}

#remove-images-modal-buttons {
  margin-top: calc(10px / var(--screen-size-delta));
}

#remove-images-modal-checkbox-parent {
  float: right;
  color: #343333;
  font-size: calc(13.5px / var(--screen-size-delta));
  bottom: calc(6.6px / var(--screen-size-delta));
  right: calc(2.2px / var(--screen-size-delta));
  position: absolute;
}

#remove-images-modal-checkbox {
  margin-left: calc(8px / var(--screen-size-delta));
}

#image-list-overflow-parent {
  overflow-x: hidden;
  overflow-y: auto;
  max-height: calc((100vh + 111px) / 2 - 1px);
  scrollbar-color: #8c8c8c #f9f9f9;
  scrollbar-width: thin;
}

#image-list-overflow-parent div:nth-child(odd) {
  border-right: 1px solid #4e4b4b26;
}

#image-list-overflow-parent::-webkit-scrollbar-track {
  background: #f9f9f9;
}

#image-list-overflow-parent::-webkit-scrollbar-thumb {
  background: #8c8c8c;
  border-radius: 10px;
}

#image-list-overflow-parent::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}
/* ... */

